# slack-unfurl-kibela

./: .envrc.example  .gitignore  Cargo.toml  Gemfile  Guardfile  Makefile  README.md  app.json  app.rb  config.rb  config.ru  kibela.rb  lambda_function.rb
misc/ruby25-bundler/: Dockerfile
src/: main.rs  types.rs
src/kibela/: client.rs  graphql.rs  mod.rs  types.rs  url.rs
src/kibela/queries/: comment_and_note.gql  note.gql  note_comment.gql
src/slack/: client.rs  events.rs  mod.rs  types.rs
