[package]
name = "slack-unfurl-kibela"
version = "0.1.0"
authors = ["otofune <otofune@otofune.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
rust-embed="5.5.1"
async-std = "1.6"
async-h1 = "2.1"
surf = "1.0.3"
base64 = "0.12.3"
